--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,7 +57,7 @@
     "leaflet.markercluster": "1.5.1",
     "leaflet.offline": "^2.0.0-beta.3",
     "lodash": "4.17.21",
-    "next": "12",
+    "next": "^12.1.4",
     "next-compose-plugins": "^2.2.1",
     "next-cookies": "^2.0.3",
     "next-pwa": "^5.4.4",
